# MTRec-RecSys

./: .gitignore  README.md  environment.yml  nvtop-x86_64.AppImage  pyproject.toml  pyvenv.cfg  rubbish.py  setupenv.job  test.job  train.job
data/: download.py
dataset/: constants.py
dataset/data/: mini_sample.json
notebooks/: data_download.ipynb  dataset_ebnerd.ipynb  exp2.ipynb  experiment.ipynb  nerf.ipynb  nrms_ebnerd.ipynb  process_results.ipynb
src/: config.yml  train.py
src/dataloaders/: ebrec_loader.py
src/ebrec/utils/: _polars.py  _python.py
src/mind/: dataset.py  train.py
src/models/: model.py
src/recsys/: dataset.py  loss.py  metrics.py  model.py  test.py  train.py  train_sampling.py
src/recsys/utils/: alias_multinomial.py  classes.py  download.py  functions.py  gradient_surgery.py
src/utils/: export.py  helper.py
